--- a/package.json
+++ b/package.json
@@ -10,6 +10,7 @@
     "body-parser": "~1.0.0",
     "config": "^3.3.0",
     "cookie-parser": "~1.0.1",
+    "cors": "^2.8.5",
     "debug": "~0.7.4",
     "express": "~4.0.0",
     "jade": "~1.3.0",
