--- a/package.json
+++ b/package.json
@@ -16,6 +16,7 @@
     "jade": "~1.3.0",
     "mongoose": "^5.9.6",
     "morgan": "~1.0.0",
+    "nodemailer": "^6.5.0",
     "sequelize": "^3.24.3",
     "sequelize-auto": "^0.4.28",
     "static-favicon": "~1.0.0"
