--- a/package.json
+++ b/package.json
@@ -6,9 +6,10 @@
     "start": "nodejs ./bin/www"
   },
   "dependencies": {
+    "@sendgrid/mail": "^7.4.2",
     "async-waterfall": "^0.1.5",
     "body-parser": "~1.0.0",
-    "config": "^3.3.0",
+    "config": "^3.3.4",
     "cookie-parser": "~1.0.1",
     "cors": "^2.8.5",
     "debug": "~0.7.4",
