--- a/package.json
+++ b/package.json
@@ -7,6 +7,7 @@
   },
   "dependencies": {
     "@sendgrid/mail": "^7.4.2",
+    "async": "^3.2.0",
     "async-waterfall": "^0.1.5",
     "body-parser": "~1.0.0",
     "config": "^3.3.4",
