--- a/package.json
+++ b/package.json
@@ -13,14 +13,18 @@
     "config": "^3.3.4",
     "cookie-parser": "~1.0.1",
     "cors": "^2.8.5",
+    "crypto": "^1.0.1",
     "debug": "^0.7.4",
     "express": "~4.0.0",
+    "fast-csv": "^4.3.6",
     "fs": "0.0.1-security",
     "http": "0.0.1-security",
     "https": "^1.0.0",
     "jade": "~1.3.0",
+    "json2csv": "^5.0.6",
     "mongoose": "^5.9.6",
     "morgan": "~1.0.0",
+    "multer": "^1.4.2",
     "nodemailer": "^6.5.0",
     "pem": "^1.14.4",
     "sequelize": "^3.24.3",
