--- a/package.json
+++ b/package.json
@@ -22,6 +22,7 @@
     "https": "^1.0.0",
     "jade": "~1.3.0",
     "json2csv": "^5.0.6",
+    "moment": "^2.29.1",
     "mongoose": "^5.9.6",
     "morgan": "~1.0.0",
     "multer": "^1.4.2",
@@ -29,6 +30,7 @@
     "pem": "^1.14.4",
     "sequelize": "^3.24.3",
     "sequelize-auto": "^0.4.28",
-    "static-favicon": "~1.0.0"
+    "static-favicon": "~1.0.0",
+    "uuid": "^8.3.2"
   }
 }
