--- a/package.json
+++ b/package.json
@@ -25,6 +25,7 @@
     "json2csv": "^5.0.6",
     "moment": "^2.29.1",
     "mongoose": "^5.9.6",
+    "mongoose-aggregate-paginate-v2": "^1.0.42",
     "morgan": "~1.0.0",
     "multer": "^1.4.2",
     "nodemailer": "^6.5.0",
